	deliberate choice, but is easy to select by removing the
	'tzone' attribute.  (Suggestion of Dan Kelley.)

    o	A new function classesToAM() returns an adjacency matrix
	representing the inheritance of the classes specified.  Allows
	better human examination of the patterns, e.g. by using the
	matrix as input to one of the graph packages (see the
	documentation).

    o	X11options(antialias = "none") now works, in consistence with X11().


DEPRECATED & DEFUNCT

    o	allGenerics() is defunct.

    o	Use of allocVector(CHARSXP ...) is defunct and gives an error.

    o	The compatibility define for graphics structure NewDevDesc in
	GraphicsDevice.h has been removed.

    o	Support for versioned installs (R CMD INSTALL --with-package-versions
	and install.packages(installWithVers = TRUE)) has been removed.
	Packages installed with versioned names will be ignored.

    o	The numeric and power(0.5) forms of argument to make.link()
	which were deprecated in 2.4.0 are now defunct: use power()
	directly.

    o	Conversion to Sd and Ssgm by R CMD Rdconv is now defunct.

    o	Support for R --gui=gnome is now defunct (and package
	gnomeGUI has been withdrwan as it used a long-obsolete version
	of GNOME).


UTILITIES

    o	R CMD build now also uses a Makevars[.win] file for cleaning
	up src/.

    o	R CMD Rd2dvi and R CMD check are now able to cope with Cyrillic
	characters in UTF-8 if environment variable _R_CYRILLIC_TEX_
	is set to a non-empty value and the latex system has suitable
	fonts (thanks to a hint from Alexey Shipunov).

    o	New function rtags() in package 'utils' that provides etags-like
	indexing capabilities for R code files.

	New front-end script R CMD rtags provides an interface to the
	rtags() function (see R CMD rtags --help for details).

    o	New environment variable R_TEXI2DVICMD to hold the path (if any)
	to 'texi2dvi' found at configure time: this now provides the
	default to option("texi2dvi").
